v2.10.2/_sources/plugins/sensor_test_template_duplicate_module.rst.txt

.. Document meta

:orphan:

.. |antsibull-internal-nbsp| unicode:: 0xA0
    :trim:

.. role:: ansible-attribute-support-label
.. role:: ansible-attribute-support-property
.. role:: ansible-attribute-support-full
.. role:: ansible-attribute-support-partial
.. role:: ansible-attribute-support-none
.. role:: ansible-attribute-support-na
.. role:: ansible-option-type
.. role:: ansible-option-elements
.. role:: ansible-option-required
.. role:: ansible-option-versionadded
.. role:: ansible-option-aliases
.. role:: ansible-option-choices
.. role:: ansible-option-choices-default-mark
.. role:: ansible-option-default-bold
.. role:: ansible-option-configuration
.. role:: ansible-option-returned-bold
.. role:: ansible-option-sample-bold

.. Anchors

.. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module:

.. Anchors: short name for ansible.builtin

.. Anchors: aliases



.. Title

cisco.catalystcenter.sensor_test_template_duplicate module -- Resource module for Sensor Test Template Duplicate
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

.. Collection note

.. note::
    This module is part of the `cisco.catalystcenter collection <https://galaxy.ansible.com/cisco/catalystcenter>`_ (version 2.10.2).

    To install it, use: :code:`ansible-galaxy collection install cisco.catalystcenter`.
    You need further requirements to be able to use this module,
    see :ref:`Requirements <ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module_requirements>` for details.

    To use it in a playbook, specify: :code:`cisco.catalystcenter.sensor_test_template_duplicate`.

.. version_added

.. rst-class:: ansible-version-added

New in cisco.catalystcenter 3.1.0

.. contents::
   :local:
   :depth: 1

.. Deprecated


Synopsis
--------

.. Description

- Manage operation update of the resource Sensor Test Template Duplicate.
- Intent API to duplicate an existing SENSOR test template.

.. note::
    This module has a corresponding :ref:`action plugin <action_plugins>`.

.. Aliases


.. Requirements

.. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module_requirements:

Requirements
------------
The below requirements are needed on the host that executes this module.

- catalystcentersdk \>= 3.1.6.0.2
- python \>= 3.12






.. Options

Parameters
----------

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Parameter
    - Comments

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_debug"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_debug"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_debug:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_debug:

      .. rst-class:: ansible-option-title

      **catalystcenter_debug**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_debug" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_debug`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable debugging.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry-default:`false` :ansible-option-choices-default-mark:`← (default)`
      - :ansible-option-choices-entry:`true`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_host"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_host"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_host:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_host:

      .. rst-class:: ansible-option-title

      **catalystcenter_host**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_host" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_host`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string` / :ansible-option-required:`required`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center hostname.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_password"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_password"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_password:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_password:

      .. rst-class:: ansible-option-title

      **catalystcenter_password**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_password" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_password`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center password to authenticate.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_port"></div>
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_api_port"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_api_port:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_port:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_port:

      .. rst-class:: ansible-option-title

      **catalystcenter_port**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_port" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_port, catalystcenter_api_port`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`integer`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center port.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`443`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_username"></div>
        <div class="ansibleOptionAnchor" id="parameter-user"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_username:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_username:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-user:

      .. rst-class:: ansible-option-title

      **catalystcenter_username**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_username" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_username, user`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      The Cisco Catalyst Center username to authenticate.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"admin"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_verify"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_verify"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_verify:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_verify:

      .. rst-class:: ansible-option-title

      **catalystcenter_verify**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_verify" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_verify`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag to enable or disable SSL certificate verification.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-catalystcenter_version"></div>
        <div class="ansibleOptionAnchor" id="parameter-dnac_version"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-catalystcenter_version:
      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-dnac_version:

      .. rst-class:: ansible-option-title

      **catalystcenter_version**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-catalystcenter_version" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-aliases:`aliases: dnac_version`

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Informs the SDK which version of Cisco Catalyst Center to use.


      .. rst-class:: ansible-option-line

      :ansible-option-default-bold:`Default:` :ansible-option-default:`"3.1.6.0"`

      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-newTemplateName"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-newtemplatename:

      .. rst-class:: ansible-option-title

      **newTemplateName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-newTemplateName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Destination test template name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-templateName"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-templatename:

      .. rst-class:: ansible-option-title

      **templateName**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-templateName" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`string`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Source test template name.


      .. raw:: html

        </div>

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="parameter-validate_response_schema"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__parameter-validate_response_schema:

      .. rst-class:: ansible-option-title

      **validate_response_schema**

      .. raw:: html

        <a class="ansibleOptionLink" href="#parameter-validate_response_schema" title="Permalink to this option"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`boolean`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      Flag for Cisco Catalyst Center SDK to enable the validation of request bodies against a JSON schema.


      .. rst-class:: ansible-option-line

      :ansible-option-choices:`Choices:`

      - :ansible-option-choices-entry:`false`
      - :ansible-option-choices-entry-default:`true` :ansible-option-choices-default-mark:`← (default)`


      .. raw:: html

        </div>


.. Attributes


.. Notes

Notes
-----

.. note::
   - SDK Method used are sensors.Sensors.duplicate\_sensor\_test\_template,
   - Paths used are put /dna/intent/api/v1/sensorTestTemplate,
   - Does not support \ :literal:`check\_mode`\ 
   - The plugin runs on the control node and does not use any ansible connection plugins,
   - but instead uses the embedded connection manager from Cisco CATALYST SDK

.. Seealso

See Also
--------

.. seealso::

   `Cisco Catalyst Center documentation for Sensors DuplicateSensorTestTemplate <https://developer.cisco.com/docs/dna-center/#!duplicate-sensor-test-template>`_
       Complete reference of the DuplicateSensorTestTemplate API.

.. Examples

Examples
--------

.. code-block:: yaml+jinja

    
    ---
    - name: Update all
      cisco.catalystcenter.sensor_test_template_duplicate:
        catalystcenter_host: "{{catalystcenter_host}}"
        catalystcenter_username: "{{catalystcenter_username}}"
        catalystcenter_password: "{{catalystcenter_password}}"
        catalystcenter_verify: "{{catalystcenter_verify}}"
        catalystcenter_port: "{{catalystcenter_port}}"
        catalystcenter_version: "{{catalystcenter_version}}"
        catalystcenter_debug: "{{catalystcenter_debug}}"
        newTemplateName: string
        templateName: string




.. Facts


.. Return values

Return Values
-------------
Common return values are documented :ref:`here <common_return_values>`, the following are the fields unique to this module:

.. rst-class:: ansible-option-table

.. list-table::
  :width: 100%
  :widths: auto
  :header-rows: 1

  * - Key
    - Description

  * - .. raw:: html

        <div class="ansible-option-cell">
        <div class="ansibleOptionAnchor" id="return-catalystcenter_response"></div>

      .. _ansible_collections.cisco.catalystcenter.sensor_test_template_duplicate_module__return-catalystcenter_response:

      .. rst-class:: ansible-option-title

      **catalystcenter_response**

      .. raw:: html

        <a class="ansibleOptionLink" href="#return-catalystcenter_response" title="Permalink to this return value"></a>

      .. rst-class:: ansible-option-type-line

      :ansible-option-type:`dictionary`

      .. raw:: html

        </div>

    - .. raw:: html

        <div class="ansible-option-cell">

      A dictionary or list with the response returned by the Cisco Catalyst Center Python SDK


      .. rst-class:: ansible-option-line

      :ansible-option-returned-bold:`Returned:` always

      .. rst-class:: ansible-option-line
      .. rst-class:: ansible-option-sample

      :ansible-option-sample-bold:`Sample:` :ansible-rv-sample-value:`{"response": {"\_id": "string", "actionInProgress": "string", "apCoverage": [{"bands": "string", "numberOfApsToTest": 0, "rssiThreshold": 0}], "connection": "string", "encryptionMode": "string", "frequency": {"unit": "string", "value": 0}, "lastModifiedTime": 0, "location": "string", "locationInfoList": [{"allSensors": true, "customManagementVlan": true, "locationId": "string", "locationType": "string", "macAddressList": ["string"], "managementVlan": "string", "siteHierarchy": "string"}], "modelVersion": 0, "name": "string", "numAssociatedSensor": 0, "numNeighborAPThreshold": 0, "profiles": [{"authProtocol": "string", "authType": "string", "certdownloadurl": "string", "certfilename": "string", "certpassphrase": "string", "certstatus": "string", "certxferprotocol": "string", "deviceType": "string", "eapMethod": "string", "extWebAuth": true, "extWebAuthAccessUrl": "string", "extWebAuthHtmlTag": [{"label": "string", "tag": "string", "value": "string"}], "extWebAuthPortal": "string", "extWebAuthVirtualIp": "string", "locationVlanList": [{"locationId": "string", "vlans": ["string"]}], "password": "string", "passwordType": "string", "profileName": "string", "psk": "string", "qosPolicy": "string", "scep": true, "tests": [{"config": [{"direction": "string", "domains": ["string"], "downlinkTest": true, "endPort": 0, "exitCommand": "string", "finalPrompt": "string", "ndtServer": "string", "ndtServerPath": "string", "ndtServerPort": "string", "numPackets": "string", "password": "string", "passwordPrompt": "string", "pathToDownload": "string", "port": 0, "probeType": "string", "protocol": "string", "proxyPassword": "string", "proxyPort": "string", "proxyServer": "string", "proxyUserName": "string", "server": "string", "servers": ["string"], "sharedSecret": "string", "startPort": 0, "transferType": "string", "udpBandwidth": 0, "uplinkTest": true, "url": "string", "userName": "string", "userNamePrompt": "string"}], "name": "string"}], "username": "string", "vlan": "string", "whiteList": true}], "radioAsSensorRemoved": true, "rssiThreshold": 0, "runNow": "string", "scheduleInDays": 0, "sensors": [{"allSensorAddition": true, "assigned": true, "configUpdated": "string", "hostName": "string", "iPerfInfo": {}, "id": "string", "ipAddress": "string", "locationId": "string", "macAddress": "string", "markedForUninstall": true, "name": "string", "runNow": "string", "sensorType": "string", "servicePolicy": "string", "status": "string", "switchMac": "string", "switchSerialNumber": "string", "switchUuid": "string", "targetAPs": ["string"], "testMacAddresses": {}, "wiredApplicationMessage": "string", "wiredApplicationStatus": "string", "xorSensor": true}], "showWlcUpgradeBanner": true, "siteHierarchy": "string", "ssids": [{"authProtocol": "string", "authType": "string", "bands": "string", "certdownloadurl": "string", "certfilename": "string", "certpassphrase": "string", "certstatus": "string", "certxferprotocol": "string", "eapMethod": "string", "extWebAuth": true, "extWebAuthAccessUrl": "string", "extWebAuthHtmlTag": [{"label": "string", "tag": "string", "value": "string"}], "extWebAuthPortal": "string", "extWebAuthVirtualIp": "string", "id": 0, "layer3webAuthEmailAddress": "string", "layer3webAuthpassword": "string", "layer3webAuthsecurity": "string", "layer3webAuthuserName": "string", "numAps": 0, "numSensors": 0, "password": "string", "passwordType": "string", "profileName": "string", "proxyPassword": "string", "proxyPort": "string", "proxyServer": "string", "proxyUserName": "string", "psk": "string", "qosPolicy": "string", "scep": true, "ssid": "string", "status": "string", "tests": [{"config": [{"direction": "string", "domains": ["string"], "downlinkTest": true, "endPort": 0, "exitCommand": "string", "finalPrompt": "string", "ndtServer": "string", "ndtServerPath": "string", "ndtServerPort": "string", "numPackets": "string", "password": "string", "passwordPrompt": "string", "pathToDownload": "string", "port": 0, "probeType": "string", "protocol": "string", "proxyPassword": "string", "proxyPort": "string", "proxyServer": "string", "proxyUserName": "string", "server": "string", "servers": ["string"], "sharedSecret": "string", "startPort": 0, "transferType": "string", "udpBandwidth": 0, "uplinkTest": true, "url": "string", "userName": "string", "userNamePrompt": "string"}], "name": "string"}], "thirdParty": {"selected": true}, "username": "string", "validFrom": 0, "validTo": 0, "whiteList": true, "wlanId": 0, "wlc": "string"}], "startTime": 0, "status": "string", "testScheduleMode": "string", "version": 0, "wlans": ["string"]}, "version": "string"}`


      .. raw:: html

        </div>



..  Status (Presently only deprecated)


.. Authors

Authors
~~~~~~~

- Rafael Campos (@racampos)



.. Extra links

Collection links
~~~~~~~~~~~~~~~~

.. raw:: html

  <p class="ansible-links">
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible/issues" aria-role="button" target="_blank" rel="noopener external">Issue Tracker</a>
    <a href="https://github.com/cisco-en-programmability/catalystcenter-ansible" aria-role="button" target="_blank" rel="noopener external">Repository (Sources)</a>
  </p>

.. Parsing errors

